# KikoEngine

./: CMakeLists.txt  Todos
src/: Game.cpp  Game.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  OrbitCamera.cpp  OrbitCamera.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  fragment_shader.glsl  main.cpp  vertex_shader.glsl
